# safir-sdk-core

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  BUILD.Linux.txt  BUILD.Windows.txt  CHANGELOG.txt  CHANGES.txt  CMakeLists.txt  CTestCustom.cmake  INSTALL.DebianBasedLinux.txt  INSTALL.Linux.txt  INSTALL.RedHatBasedLinux.txt  INSTALL.Windows.txt  Jenkinsfile  README.md  README.txt  TODO.txt  VERSION.txt  conan.cmake  conanfile.py
docs/: .gitignore  CMakeLists.txt  nuget-readme.md  version.txt
docs/doxygen/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  mainpage.md
docs/examples/: CMakeLists.txt
docs/manpages/: .gitignore  CMakeLists.txt  backdoor.1.asciidoc  bd.1.asciidoc  crash_dump_monitor.1.asciidoc  dobexplorer.1.asciidoc  dobmake-batch.1.asciidoc  dobmake.1.asciidoc  dope_bin2xml.1.asciidoc  dope_main.1.asciidoc  dose_main.1.asciidoc  dose_memory_stats.1.asciidoc  dots_configuration_check.1.asciidoc  dots_v.1.asciidoc  foreach.1.asciidoc  logger_control.1.asciidoc  safir_control.1.asciidoc  safir_control_cli.1.asciidoc  safir_control_gui.1.asciidoc  safir_entity_viewer.1.asciidoc  safir_memory_allocator.1.asciidoc  safir_resolver.1.asciidoc  safir_show_config.1.asciidoc  safir_statistics_dump.1.asciidoc  safir_status.1.asciidoc  safir_tool_launcher.1.asciidoc  safir_tracer_listener.1.asciidoc  safir_tracer_viewer.1.asciidoc  safir_websocket.1.asciidoc  sate.1.asciidoc  sate_legacy.1.asciidoc  sate_next.1.asciidoc  system_picture_listener.1.asciidoc
docs/requirements/: .gitignore  CMakeLists.txt  Makefile  README.txt  asciidoc-dblatex-custom.sty  compliance.txt  custom-coverpage-dblatex.sty  custom-xhtml11.css  requirements_specification-docinfo.xml  requirements_specification.txt  safir-stylesheet.css
docs/safir_sdk_core_sug/: Makefile  README.txt  example_applications.txt  safir_sdk_core_sug-docinfo.xml  safir_sdk_core_sug.txt  tracer.txt
docs/safir_sdk_core_sug/formalities/: Makefile  cover.doc
docs/safir_sdk_core_sug/images/: README.txt  block-diagram.dia  sug_diagrams.eap
docs/users_guide/: .gitignore  CMakeLists.txt  COPYING.txt  Makefile  README.txt  asciidoc-dblatex.xsl  custom-coverpage-dblatex.sty  custom-xhtml11.css  example_applications.txt  olib.txt  safir_sdk_core_sug-docinfo.xml  safir_sdk_core_sug.txt  source-highlight-filter.conf  tracer.txt  users_guide.txt  websocket_api_reference.txt
docs/users_guide/formalities/: Makefile  cover.doc
docs/users_guide/images/: .gitignore  README.txt  block_diagram.dia  example_object.dia  object_hierarchy.dia  orphan_object.dia
examples/: .gitignore  CMakeLists.txt
examples/dou_files/: CMakeLists.txt
examples/dou_files/config/: Capabilities.Vehicles.DatabaseParameters.dou
examples/dou_files/data/: Capabilities.Vehicles.SetVehicleCategoryService.dou  Capabilities.Vehicles.Vehicle.dou  Capabilities.Vehicles.VehicleCategoryCode.dou  Safir.Geodesy.Position.dou
examples/vehicleapp/data/: Capabilities.SpeedObjectProperty.dou
examples/vehicleapp/extra/: Safir.Geodesy.Position.dou
examples/vehicleapp/src/: CMakeLists.txt
examples/vehicledb/src/: CMakeLists.txt
examples/vehiclemmi/src/: CMakeLists.txt
src/: CMakeLists.txt
src/boost_patches/: README-container_destroyers.txt
src/cmake/: .gitignore  BuildSafirGenerated.cmake  CSharpMacros.cmake  CSharpMacros.cmake.old  FindAsciidoc.cmake  FindAsciidoctor.cmake  FindCSharp.cmake  FindSafirSDKCore.cmake  FindUnixODBC.cmake  LibFindMacros.cmake  NuGetPackaging.cmake  PrecompiledHeader.cmake  SafirCompilerSettings.cmake  SafirLoadBoost.cmake  SafirLoadCSharp.cmake  SafirLoadJava.cmake  SafirSDKCoreConfig.cmake.in  UseJavaWithManifest.cmake  build_generated.cmake  conan_provider.cmake
src/cmake/UseJavaWithManifest/: README.txt
src/config/: .gitignore  CMakeLists.txt  locations.ini.in  logging.ini  logging.ini.in  typesystem.ini  typesystem.ini.in
src/control/: CMakeLists.txt
src/distribution/: CMakeLists.txt  Message.h
src/distribution/communication.ss/: CMakeLists.txt
src/dope/: CMakeLists.txt
src/dope/docs/: release_notes.txt
src/dope/dope_main.ss/: CMakeLists.txt
src/dope/dope_test_dou.ss/: CMakeLists.txt
src/dose/: CMakeLists.txt
src/dose/docs/: release_notes.txt
src/dose/dose_ada.ss/: CMakeLists.txt
src/dose/dose_dou.ss/: CMakeLists.txt
src/dose/dose_test.ss/: .gitignore  CMakeLists.txt  Makefile.win32  run_all_languages_five_times.bat  run_all_languages_once.bat  run_dose_tests.py  start_test_programs_node_0.bat  start_test_programs_node_1.bat
src/dose/dose_test_dou.ss/: CMakeLists.txt
src/dots/: CMakeLists.txt
src/dots/docs/: release_notes.txt
src/dots/dots_ada.ss/: CMakeLists.txt
src/dots/dots_configuration_check.ss/: CMakeLists.txt  dots_configuration_check.cpp
src/dots/dots_cpp.ss/: CMakeLists.txt
src/dots/dots_cpp_build_helper.ss/: CppBuildHelper.cs  dots_cpp_build_helper.csproj
src/dots/dots_depends.ss/: CMakeLists.txt
src/dots/dots_java_build_helper.ss/: JavaBuildHelper.cs  dots_java_build_helper.csproj
src/dots/dots_schema_validator.ss/: AssemblyInfo.cs  CMakeLists.txt  dots_schema_validator.cs  dots_schema_validator.csproj
src/dots/dots_test.ss/: CMakeLists.txt  Makefile  output.txt  run_test.py
src/dots/dots_test_dou.ss/: CMakeLists.txt
src/dots/dots_test_extra_dou.ss/: CMakeLists.txt  DotsTest.ExtraObject.dou
src/dots/dots_v.ss/: CMakeLists.txt  dots_v.gpr  dots_v.py
src/dots/dots_web.ss/: CMakeLists.txt
src/douf/: CMakeLists.txt
src/douf/docs/: release_notes.txt
src/douf/douf_ada.ss/: CMakeLists.txt
src/douf/douf_dou.ss/: CMakeLists.txt
src/douf/douf_test.ss/: .gitignore  CMakeLists.txt
src/douf/douf_time_mix.ss/: CMakeLists.txt
src/foreach/: CMakeLists.txt
src/lluf/: CMakeLists.txt
src/logging/: CMakeLists.txt
src/olib/: CMakeLists.txt
src/patch_check/: .gitignore  CMakeLists.txt
src/safir_dou/: CMakeLists.txt  Safir.Dob.NodeParameters.dou.in  Safir.Dob.PersistenceParameters.dou.in
src/status/: CMakeLists.txt
src/swre/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/util/: CMakeLists.txt
src/websocket/: CMakeLists.txt
(+5847 files in other folders)
